--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/question_app
+spring.datasource.url=jdbc:mysql://localhost:3307/question_app?serverTimezone=JST
 spring.datasource.username=root
 spring.datasource.password=password
+spring.jpa.database=MYSQL
+spring.jpa.hibernate.ddl-auto=update
+spring.autoconfigure.exclude=org.springframework.boot.devtools.autoconfigure.DevToolsDataSourceAutoConfiguration
 spring.flyway.baseline-version=1.0.0
 spring.flyway.baseline-on-migrate=true
+spring.flyway.url: jdbc:mysql://localhost:3307/question_app
+spring.flyway.user: admin
+spring.flyway.password: password
