--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 			    <groupId>org.flywaydb</groupId> 
 			    <artifactId>flyway-maven-plugin</artifactId>
 			    <configuration>
-			        <url>jdbc:mysql://localhost:3307/question_app</url>
+			        <url>jdbc:mysql://localhost:3306/questiontable</url>
 			        <user>root</user>
 			        <password>password</password>
 			    </configuration>
