--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/question_app
+spring.datasource.url=jdbc:mysql://localhost:3306/questiontable
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=passwerd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.flyway.baseline-version=1.0.0
 spring.flyway.baseline-on-migrate=true
